# realengine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: light_cube.shader  shader.shader
data/base/: basic.shader  environment.shader  profiler.html  sprite.shader
data/vox/: environment.shader  vox.shader
src/: CMakeLists.txt  main.cpp
src/engine/: AbstractManager.cpp  AbstractManager.h  Base.cpp  Base.h  CMakeLists.txt  Camera.cpp  Camera.h  Editor.cpp  Editor.h  EditorGlobals.cpp  EditorGlobals.h  EngineGlobals.cpp  EngineGlobals.h  GlobalLight.h  Gui.cpp  Gui.h  Image.cpp  Image.h  IndexBufferObject.cpp  IndexBufferObject.h  Intersection.h  Light.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  MeshManager.cpp  MeshManager.h  Node.cpp  Node.h  NodeMesh.cpp  NodeMesh.h  Random.cpp  Random.h  Ray.h  Renderer.cpp  (+26 more)
src/engine/events/: CMakeLists.txt  Event.cpp  Event.h  InputEvents.h  WindowEvents.h
src/engine/fs/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
src/engine/imgui/: CMakeLists.txt  ImGuiUtils.cpp  ImGuiUtils.h
src/engine/input/: CMakeLists.txt  Input.cpp  Input.h  InputCommon.h  InputUtils.cpp  InputUtils.h
src/engine/math/: BoundBox.h  BoundSphere.h  Bounds.h  CMakeLists.txt  FrustumPlanes.h  IntersectionMath.cpp  IntersectionMath.h  Math.h
src/engine/profiler/: CMakeLists.txt  ScopedProfiler.cpp  ScopedProfiler.h  ScopedTimer.cpp  ScopedTimer.h
src/engine/signals/: CMakeLists.txt  Signals.cpp  Signals.h
src/engine/threads/: CMakeLists.txt  Job.cpp  Job.h  JobQueue.cpp  JobQueue.h  Thread.cpp  Thread.h  Threads.cpp  Threads.h  WorkerThread.cpp  WorkerThread.h
src/engine/time/: CMakeLists.txt  Time.cpp  Time.h
src/engine/utils/: Algos.h  CMakeLists.txt  Hashers.h
src/engine/voxels/: BasicBlocks.cpp  BasicBlocks.h  BlockDescription.h  BlockInfo.h  BlocksRegistry.cpp  BlocksRegistry.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshGenerator.cpp  ChunkMeshGenerator.h  ChunksMap.cpp  ChunksMap.h  Common.h  VoxelEngine.cpp  VoxelEngine.h  VoxelsUtils.cpp  VoxelsUtils.h
src/engine/voxels/noise/: CMakeLists.txt  MapToMinMax.cpp  MapToMinMax.h
