add_subdirectory(fs)
add_subdirectory(imgui)
add_subdirectory(time)

target_sources(realengine
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/Base.h
        ${CMAKE_CURRENT_SOURCE_DIR}/EngineGlobals.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/EngineGlobals.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Image.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Image.h
        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MeshLoader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MeshLoader.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Shader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Shader.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Texture.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Texture.h
)
