add_subdirectory(events)
add_subdirectory(fs)
add_subdirectory(imgui)
add_subdirectory(input)
add_subdirectory(math)
add_subdirectory(signals)
add_subdirectory(time)

target_sources(realengine
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/AbstractManager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/AbstractManager.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Base.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Camera.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Camera.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Editor.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Editor.h
        ${CMAKE_CURRENT_SOURCE_DIR}/EngineGlobals.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/EngineGlobals.h
        ${CMAKE_CURRENT_SOURCE_DIR}/EditorGlobals.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/EditorGlobals.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Gui.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Gui.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Image.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Image.h
        ${CMAKE_CURRENT_SOURCE_DIR}/IndexBufferObject.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/IndexBufferObject.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Light.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Light.h
        ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Material.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Material.h
        ${CMAKE_CURRENT_SOURCE_DIR}/MaterialManager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MaterialManager.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Mesh.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Mesh.h
        ${CMAKE_CURRENT_SOURCE_DIR}/MeshLoader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MeshLoader.h
        ${CMAKE_CURRENT_SOURCE_DIR}/MeshManager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/MeshManager.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Node.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Node.h
        ${CMAKE_CURRENT_SOURCE_DIR}/NodeMesh.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/NodeMesh.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Random.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Random.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Renderer.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Renderer.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Shader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Shader.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ShaderManager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ShaderManager.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Statistics.h
        ${CMAKE_CURRENT_SOURCE_DIR}/SystemProxy.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/SystemProxy.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Texture.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Texture.h
        ${CMAKE_CURRENT_SOURCE_DIR}/TextureManager.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/TextureManager.h
        ${CMAKE_CURRENT_SOURCE_DIR}/VertexArrayObject.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/VertexArrayObject.h
        ${CMAKE_CURRENT_SOURCE_DIR}/VertexBufferObject.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/VertexBufferObject.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Visualizer.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Visualizer.h
        ${CMAKE_CURRENT_SOURCE_DIR}/Window.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/Window.h
        ${CMAKE_CURRENT_SOURCE_DIR}/World.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/World.h
)
